# SL-Configurator-Docs

./: .folder-hierarchy-only.html.swp  README.md  SL-Configurator.code-workspace  cpp-dev-setup-macos.md  folder-hierarchy-only.html
.github/workflows/: deploy.yml
de/: .gitignore  book.toml
de/src/: README.md  SUMMARY.md  folder-hierarchy-only.html
de/src/0-einleitung/: README.md
de/src/1-einleitung/: README.md
de/src/1-installation/: README.md
de/src/10-datenexport/: README.md
de/src/10-firmware-update-assistent/: README.md
de/src/11-firmware-update-assistent/: README.md
de/src/2-aktivierung/: README.md
de/src/2-installation/: README.md
de/src/3-aktivierung/: README.md
de/src/3-einstellungen/: README.md
de/src/3-einstellungen/3-1-allgemein/: README.md
de/src/3-einstellungen/3-2-verbindung/: README.md
de/src/3-einstellungen/3-3-sicherheit/: README.md
de/src/4-einstellungen/: README.md
de/src/4-leuchten-konfiguration/: README.md
de/src/5-geraet/: README.md
de/src/5-geraetegruppen/: 5-geraetegruppen.md  README.md
de/src/5-verfuegbare-geraete/: README.md
de/src/6-geraetegruppe/: README.md
de/src/6-sensoren/: 6-sensoren.md  README.md
de/src/7-karte/: README.md
de/src/7-master-lichtschalter/: README.md
de/src/7-uebergeordnete-lichtschalter/: README.md
de/src/8-servicemodus/: README.md
de/src/9-datenexport/: README.md
de/src/9-slc-rc-switch-konfiguration/: 9-slc-rc-switch-konfiguration.md  README.md
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
~/.config/nvim/: init.lua
(+200 files in other folders)
